--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
 :root {
   --my-gap: 60px;
+  --menu-open-width: 400px;
+  --basic-transition-time: .5s;
 }
 
 *,
@@ -19,9 +21,10 @@ html {
 
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-image: url("./../img/architectural-design-architecture-buildings-city-374811.jpg");
   background-size: cover;
+  overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,6 +52,21 @@ body {
   -ms-grid-rows: (calc(200px + var(--my-gap)))[2];
       grid-template-rows: repeat(2, calc(200px + var(--my-gap)));
   gap: var(--my-gap);
+  margin-left: 10rem;
+  -webkit-transition: all var(--basic-transition-time);
+  transition: all var(--basic-transition-time);
+}
+
+@media only screen and (max-width: 84.375em) {
+  .container {
+    -ms-grid-columns: (100px)[4];
+        grid-template-columns: repeat(4, 100px);
+    -ms-grid-rows: (calc(200px + var(--my-gap)))[3];
+        grid-template-rows: repeat(3, calc(200px + var(--my-gap)));
+    margin-top: 0;
+    margin-bottom: auto;
+    padding: 2rem 0;
+  }
 }
 
 .card {
@@ -58,6 +76,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: 2;
 }
 
 .card--1 {
@@ -103,6 +122,33 @@ body {
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
+}
+
+@media only screen and (max-width: 84.375em) {
+  .card--3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .card--4 {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
+    grid-column: 3/5;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .card--5 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+  }
 }
 
 .card__side {
@@ -195,6 +241,14 @@ body {
   margin: 1rem;
 }
 
+.back-all-card {
+  position: absolute;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+}
+
 .navbar {
   position: absolute;
   top: 0;
@@ -202,15 +256,28 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 100vh;
   width: 70px;
   background-color: #fff;
+  z-index: 3;
+  -webkit-transition: all var(--basic-transition-time);
+  transition: all var(--basic-transition-time);
+}
+
+@media only screen and (max-width: 84.375em) {
+  .navbar {
+    height: 100%;
+  }
 }
 
 .hamburger {
@@ -236,11 +303,48 @@ body {
   background-color: #2B6F71;
   height: 5px;
   border-radius: 10px;
+  -webkit-transition: all var(--basic-transition-time);
+  transition: all var(--basic-transition-time);
 }
 
 .hamburger__line--2 {
   margin-top: 10%;
   margin-bottom: 10%;
+}
+
+.menu {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: auto 0;
+  width: 80%;
+  overflow: hidden;
+  -webkit-transition: all var(--basic-transition-time);
+  transition: all var(--basic-transition-time);
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.menu__item {
+  font-family: 'Segoe UI';
+  padding: 3rem 0rem;
+  text-align: center;
+}
+
+.menu__item a, .menu__item a:link, .menu__item a:visited {
+  text-decoration: none;
+  font-size: 3rem;
+  color: #000;
+}
+
+.menu__line {
+  width: 100%;
+  background-color: #2B6F71;
+  height: 5px;
+  border-radius: 10px;
 }
 
 .animation-rotate-card-front {
@@ -251,5 +355,148 @@ body {
 .animation-rotate-card-back {
   -webkit-transform: rotateY(0);
           transform: rotateY(0);
+}
+
+.animation-open-navbar {
+  width: var(--menu-open-width) !important;
+}
+
+.animation-center-cards-after-open-menu {
+  margin-left: var(--menu-open-width) !important;
+}
+
+.animation-open-hamburger-slice-1 {
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
+  -webkit-transform: rotate(-45deg) translateY(-9px);
+          transform: rotate(-45deg) translateY(-9px);
+}
+
+.animation-open-hamburger-slice-2 {
+  opacity: 0 !important;
+}
+
+.animation-open-hamburger-slice-3 {
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
+  -webkit-transform: rotate(45deg) translateY(3px) translateX(-5px);
+          transform: rotate(45deg) translateY(3px) translateX(-5px);
+}
+
+.animation-open-menu {
+  opacity: 1 !important;
+  -webkit-animation: animation-keyframes-open-menu .9s ease-out .2s;
+          animation: animation-keyframes-open-menu .9s ease-out .2s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+.animation-close-menu {
+  -webkit-animation: animation-keyframes-close-menu var(--basic-transition-time);
+          animation: animation-keyframes-close-menu var(--basic-transition-time);
+}
+
+@-webkit-keyframes animation-keyframes-open-menu {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-30rem);
+            transform: translateX(-30rem);
+  }
+  20% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+  }
+  70% {
+    -webkit-transform: translateX(-10rem);
+            transform: translateX(-10rem);
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+    -webkit-transform-origin: bottom right;
+            transform-origin: bottom right;
+  }
+  90% {
+    -webkit-transform: rotate(-3deg);
+            transform: rotate(-3deg);
+    -webkit-transform-origin: bottom left;
+            transform-origin: bottom left;
+  }
+  100% {
+    -webkit-transform: translateX(0rem);
+            transform: translateX(0rem);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 1;
+    -webkit-transform: translate(1);
+            transform: translate(1);
+  }
+}
+
+@keyframes animation-keyframes-open-menu {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-30rem);
+            transform: translateX(-30rem);
+  }
+  20% {
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+  }
+  70% {
+    -webkit-transform: translateX(-10rem);
+            transform: translateX(-10rem);
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
+    -webkit-transform-origin: bottom right;
+            transform-origin: bottom right;
+  }
+  90% {
+    -webkit-transform: rotate(-3deg);
+            transform: rotate(-3deg);
+    -webkit-transform-origin: bottom left;
+            transform-origin: bottom left;
+  }
+  100% {
+    -webkit-transform: translateX(0rem);
+            transform: translateX(0rem);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 1;
+    -webkit-transform: translate(1);
+            transform: translate(1);
+  }
+}
+
+@-webkit-keyframes animation-keyframes-close-menu {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateX(0rem);
+            transform: translateX(0rem);
+  }
+  10% {
+    -webkit-transform: translateX(1rem);
+            transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(-100rem);
+            transform: translate(-100rem);
+  }
+}
+
+@keyframes animation-keyframes-close-menu {
+  0% {
+    opacity: 1;
+    -webkit-transform: translateX(0rem);
+            transform: translateX(0rem);
+  }
+  10% {
+    -webkit-transform: translateX(1rem);
+            transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(-100rem);
+            transform: translate(-100rem);
+  }
 }
 /*# sourceMappingURL=main.css.map */
