--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,46 +1,92 @@
-.navbar{
+.navbar {
     position: absolute;
     top: 0;
     left: 0;
 
     display: flex;
-    justify-content: center;
-    align-items: start;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
 
     height: 100vh;
     width: 70px;
     background-color: #fff;
+    z-index: 3;
+
+    transition: all var(--basic-transition-time);
+
+    @media only screen and (max-width: $bp-largest) {
+        height: 100%;
+    }
 }
-.hamburger{
+
+.hamburger {
     width: 60px;
     height: 60px;
-    // background-color: red;
 
 
-    
-
-    
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
-    &__line{
+    &__line {
         width: 65%;
         background-color: #2B6F71;
         height: 5px;
         border-radius: 10px;
-        &--1{
+        transition: all var(--basic-transition-time);
 
-        }
-        &--2{
+        &--1 {}
+
+        &--2 {
             margin-top: 10%;
             margin-bottom: 10%;
         }
-        &--3{
-            
+
+        &--3 {}
+    }
+
+}
+
+.menu {
+    justify-self: center;
+    align-self: center;
+    // background-color: red;
+    margin: auto 0;
+    width: 80%;
+    overflow: hidden;
+    transition: all var(--basic-transition-time);
+    opacity: 0;
+    // transform: translateX(-10rem);
+    backface-visibility: hidden;
+
+
+    &__item {
+
+        font-family: 'Segoe UI';
+        padding: 3rem 0rem;
+        text-align: center;
+        // width: 50px;
+
+        a {
+
+            &,
+            &:link,
+            &:visited {
+
+                text-decoration: none;
+                font-size: 3rem;
+                color: #000;
+
+            }
         }
     }
 
-   
+    &__line {
+        width: 100%;
+        background-color: #2B6F71;
+        height: 5px;
+        border-radius: 10px;
+    }
 }
