--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -8,9 +8,27 @@
     grid-template-rows: repeat(2, calc(200px + var(--my-gap)));
     gap: var(--my-gap);
 
+    margin-left: 10rem;
+
+    transition: all var(--basic-transition-time);
+
+
+    @media only screen and (max-width: $bp-largest) {
+        grid-template-columns: repeat(4, 100px);
+        grid-template-rows: repeat(3, calc(200px + var(--my-gap)));
+        margin-top: 0;
+        margin-bottom: auto;
+        padding: 2rem 0;
+    }
+
+
+
+
+
 }
 
 .card {
+
     //perfect spin
     perspective: 150rem;
     -moz-perspective: 150rem;
@@ -18,11 +36,13 @@
     width: 100%;
     height: 100%;
     position: relative;
+    z-index: 2;
 
 
     &--1 {
         grid-column: 1/3;
         grid-row: 1/2;
+
     }
 
     &--2 {
@@ -45,13 +65,22 @@
         grid-row: 2/3;
     }
 
-    // &:hover &__side-front {
-    //     transform: rotateY(-180deg);
-    // }
+    @media only screen and (max-width: $bp-largest) {
+        &--3 {
+            grid-column: 1/3;
+            grid-row: 2/3;
+        }
 
-    // &:hover &__side-back {
-    //     transform: rotateY(0);
-    // }
+        &--4 {
+            grid-column: 3/5;
+            grid-row: 2/3;
+        }
+
+        &--5 {
+            grid-column: 2/4;
+            grid-row: 3/4;
+        }
+    }
 
     &__side {
         transition: all .8s ease;
@@ -70,6 +99,7 @@
         }
 
         &-back {
+            // backface-visibility: hidden;
             position: absolute;
             top: 0;
             left: 0;
@@ -133,11 +163,19 @@
     }
 
     &__about {
+
         font-family: 'Segoe UI';
         font-size: 2rem;
         margin: 1rem;
     }
 
+}
 
+.back-all-card {
+    position: absolute;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
 
 }
