--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
 :root {
   --my-gap: 60px;
   --menu-open-width: 400px;
+  --menu-close-width: 70px;
   --basic-transition-time: .5s;
+}
+
+@media only screen and (max-width: 43.75em) {
+  :root {
+    --menu-open-width: 100%;
+  }
 }
 
 *,
@@ -20,11 +27,9 @@ html {
 }
 
 body {
-  width: 100vw;
-  height: 100%;
   background-image: url("./../img/architectural-design-architecture-buildings-city-374811.jpg");
   background-size: cover;
-  overflow-x: hidden;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -35,6 +40,13 @@ body {
       -ms-flex-align: center;
           align-items: center;
   background-repeat: no-repeat;
+  position: relative;
+}
+
+@media only screen and (max-width: 84.375em) {
+  body {
+    overflow-y: auto;
+  }
 }
 
 .container {
@@ -52,7 +64,7 @@ body {
   -ms-grid-rows: (calc(200px + var(--my-gap)))[2];
       grid-template-rows: repeat(2, calc(200px + var(--my-gap)));
   gap: var(--my-gap);
-  margin-left: 10rem;
+  margin-left: var(--menu-close-width);
   -webkit-transition: all var(--basic-transition-time);
   transition: all var(--basic-transition-time);
 }
@@ -65,7 +77,25 @@ body {
         grid-template-rows: repeat(3, calc(200px + var(--my-gap)));
     margin-top: 0;
     margin-bottom: auto;
-    padding: 2rem 0;
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 65.625em) {
+  .container {
+    -ms-grid-columns: (100px)[2];
+        grid-template-columns: repeat(2, 100px);
+    -ms-grid-rows: (calc(200px + var(--my-gap)))[5];
+        grid-template-rows: repeat(5, calc(200px + var(--my-gap)));
+  }
+}
+
+@media only screen and (max-width: 28.125em) {
+  .container {
+    margin-top: var(--menu-close-width);
+    margin-left: 0;
+    padding: 0;
+    padding-top: var(--my-gap);
   }
 }
 
@@ -148,6 +178,41 @@ body {
     -ms-grid-row: 3;
     -ms-grid-row-span: 1;
     grid-row: 3/4;
+  }
+}
+
+@media only screen and (max-width: 65.625em) {
+  .card--2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .card--3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+  }
+  .card--4 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .card--5 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
   }
 }
 
@@ -266,10 +331,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh;
-  width: 70px;
+  height: 100%;
+  width: var(--menu-close-width);
   background-color: #fff;
-  z-index: 3;
+  z-index: 5;
   -webkit-transition: all var(--basic-transition-time);
   transition: all var(--basic-transition-time);
 }
@@ -280,9 +345,19 @@ body {
   }
 }
 
+@media only screen and (max-width: 28.125em) {
+  .navbar {
+    height: var(--menu-close-width);
+    width: 100vw;
+  }
+}
+
 .hamburger {
   width: 60px;
   height: 60px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -296,6 +371,46 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 28.125em) {
+  .hamburger {
+    position: absolute;
+    -webkit-transform: translate(-50%, 0%);
+            transform: translate(-50%, 0%);
+    top: 4px;
+    left: 50%;
+  }
+}
+
+.hamburger:hover .hamburger__line {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.hamburger__checkbox {
+  display: none;
+}
+
+.hamburger__checkbox:checked ~ label > div > .hamburger__line--1 {
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
+  -webkit-transform: rotate(-45deg) translateY(-9px);
+          transform: rotate(-45deg) translateY(-9px);
+}
+
+.hamburger__checkbox:checked ~ label > div > .hamburger__line--2 {
+  opacity: 0 !important;
+}
+
+.hamburger__checkbox:checked ~ label > div > .hamburger__line--3 {
+  -webkit-transform-origin: center right;
+          transform-origin: center right;
+  -webkit-transform: rotate(45deg) translateY(3px) translateX(-5px);
+          transform: rotate(45deg) translateY(3px) translateX(-5px);
 }
 
 .hamburger__line {
@@ -328,6 +443,18 @@ body {
           backface-visibility: hidden;
 }
 
+@media only screen and (max-width: 84.375em) {
+  .menu {
+    margin: 6rem 0;
+  }
+}
+
+@media only screen and (max-width: 28.125em) {
+  .menu {
+    margin-top: 50px;
+  }
+}
+
 .menu__item {
   font-family: 'Segoe UI';
   padding: 3rem 0rem;
@@ -338,6 +465,10 @@ body {
   text-decoration: none;
   font-size: 3rem;
   color: #000;
+}
+
+.menu__line:first-of-type {
+  margin-top: 4rem;
 }
 
 .menu__line {
@@ -361,26 +492,12 @@ body {
   width: var(--menu-open-width) !important;
 }
 
+.animate-open-navbar-small-device {
+  height: 500px !important;
+}
+
 .animation-center-cards-after-open-menu {
   margin-left: var(--menu-open-width) !important;
-}
-
-.animation-open-hamburger-slice-1 {
-  -webkit-transform-origin: center right;
-          transform-origin: center right;
-  -webkit-transform: rotate(-45deg) translateY(-9px);
-          transform: rotate(-45deg) translateY(-9px);
-}
-
-.animation-open-hamburger-slice-2 {
-  opacity: 0 !important;
-}
-
-.animation-open-hamburger-slice-3 {
-  -webkit-transform-origin: center right;
-          transform-origin: center right;
-  -webkit-transform: rotate(45deg) translateY(3px) translateX(-5px);
-          transform: rotate(45deg) translateY(3px) translateX(-5px);
 }
 
 .animation-open-menu {
