--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -8,8 +8,7 @@
     grid-template-rows: repeat(2, calc(200px + var(--my-gap)));
     gap: var(--my-gap);
 
-    margin-left: 10rem;
-
+    margin-left: var(--menu-close-width);
     transition: all var(--basic-transition-time);
 
 
@@ -18,11 +17,24 @@
         grid-template-rows: repeat(3, calc(200px + var(--my-gap)));
         margin-top: 0;
         margin-bottom: auto;
-        padding: 2rem 0;
+        padding: 2rem;
     }
 
 
+    @media only screen and (max-width: $bp-large) {
 
+        grid-template-columns: repeat(2, 100px);
+        grid-template-rows: repeat(5, calc(200px + var(--my-gap)));
+
+    }
+
+    @media only screen and (max-width: $bp-small) {
+
+        margin-top: var(--menu-close-width);
+        margin-left: 0;
+        padding: 0;
+        padding-top: var(--my-gap);
+    }
 
 
 }
@@ -80,6 +92,30 @@
             grid-column: 2/4;
             grid-row: 3/4;
         }
+    }
+
+    @media only screen and (max-width: $bp-large) {
+        &--2 {
+            grid-column: 1/3;
+            grid-row: 2/3;
+        }
+
+        &--3 {
+            grid-column: 1/3;
+            grid-row: 3/4;
+        }
+
+        &--4 {
+            grid-column: 1/3;
+            grid-row: 4/5;
+        }
+
+        &--5 {
+            grid-column: 1/3;
+            grid-row: 5/6;
+        }
+
+
     }
 
     &__side {
@@ -177,5 +213,4 @@
     width: 100vw;
     height: 100vh;
     z-index: 1;
-
 }
