--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -123,22 +123,54 @@
     &__item {
 
         font-family: 'Segoe UI';
-        padding: 3rem 0rem;
+        // padding: 3rem 0rem;
         text-align: center;
         // width: 50px;
+        height: 90px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
 
         a {
 
             &,
             &:link,
             &:visited {
-
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 text-decoration: none;
                 font-size: 3rem;
                 color: #000;
-
+                height: 100%;
+                width: 100%;
+                // z-index: 5;
+                position: relative;
             }
+
+            &::before {
+                position: absolute;
+                content: "";
+                height: 100%;
+                width: 0;
+                background-color: #2B6F71;
+                z-index: -1;
+                transition: all .3s;
+            }
+
+            &:hover::before {
+                width: 100%;
+            }
+
+            &:hover {
+                color: #fff;
+                // box-shadow: 27px 27px 8px rgba($color: #000000, $alpha: .3);
+            }
+
+
         }
+
     }
 
     &__line:first-of-type {
