--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -55,6 +55,9 @@
         grid-column: 1/3;
         grid-row: 1/2;
 
+
+
+
     }
 
     &--2 {
@@ -159,14 +162,80 @@
         top: 5px;
         right: 5px;
         cursor: pointer;
-        // pointer-events: none;
+        transition: transform .3s;
+        // border-radius: 100%;
 
+        &:hover {
+            transform: translateY(-.6rem);
+
+        }
     }
 
     &__icon {
         fill: #000;
         width: 120px;
         height: 120px;
+        // transition: all .5s;
+        z-index: 2;
+
+        &--1:hover {
+            animation: animation-card-icon-up-down 1s;
+            animation-iteration-count: infinite;
+        }
+
+        &--2:hover {
+            animation: animation-card-icon-vibrate 1.2s;
+            // animation-iteration-count: infinite;
+        }
+
+        &--3:hover~&--3-strip-1 {
+            background-image: linear-gradient(to right, rgb(1, 105, 7), rgb(255, 255, 255));
+            width: 60px;
+        }
+
+        &--3-strip-1 {
+            position: absolute;
+            top: 30px;
+            right: 30px;
+            width: 0px;
+            height: 10px;
+            z-index: 1;
+            transition: all .6s;
+            pointer-events: none;
+        }
+
+        &--3:hover~&--3-strip-2 {
+            background-image: linear-gradient(to right, rgb(11, 191, 236), rgb(255, 255, 255));
+            width: 60px;
+        }
+
+        &--3-strip-2 {
+            position: absolute;
+            top: 45px;
+            right: 30px;
+            width: 0px;
+            height: 10px;
+            z-index: 1;
+            transition: all .8s;
+            pointer-events: none;
+        }
+
+        &--3:hover~&--3-strip-3 {
+            background-image: linear-gradient(to right, #F99059, rgb(255, 255, 255));
+            width: 60px;
+        }
+
+        &--3-strip-3 {
+            position: absolute;
+            top: 60px;
+            right: 30px;
+            width: 0px;
+            height: 10px;
+            z-index: 1;
+            transition: all 1s;
+            pointer-events: none;
+        }
+
     }
 
     &__title {
@@ -182,7 +251,8 @@
         &,
         &:link,
         &:visited {
-            text-decoration: none; //! TUU SKONCZYŁES
+            text-decoration: none;
+            position: relative;
         }
 
     }
@@ -196,6 +266,12 @@
         margin: 4px;
         cursor: pointer;
         align-self: flex-end;
+        transition: transform .3s;
+
+        &:hover {
+            transform: translateX(-.6rem);
+
+        }
     }
 
     &__about {
