--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -76,3 +76,107 @@
         transform: translate(-100rem);
     }
 }
+
+@keyframes animation-card-icon-up-down {
+    0% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(-15px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+@keyframes animation-card-icon-vibrate {
+    $vibrate-angle-small: 5deg;
+    $vibrate-angle-large: 5deg;
+    $move-up: 10px;
+
+    0% {
+        transform: translateY(0px);
+    }
+
+    5% {
+        transform: rotate(-$vibrate-angle-small);
+    }
+
+    10% {
+        transform: rotate($vibrate-angle-small);
+    }
+
+    15% {
+        transform: rotate(-$vibrate-angle-small);
+    }
+
+    20% {
+        transform: rotate($vibrate-angle-small);
+    }
+
+    25% {
+        transform: rotate(-$vibrate-angle-small);
+    }
+
+    30% {
+        transform: rotate($vibrate-angle-small);
+    }
+
+    35% {
+        transform: rotate(-$vibrate-angle-small);
+    }
+
+    40% {
+        transform: rotate($vibrate-angle-small);
+    }
+
+    45% {
+        transform: rotate(-$vibrate-angle-small) translateY(-5px);
+    }
+
+    50% {
+        transform: rotate($vibrate-angle-small) translateY(-10px);
+    }
+
+    55% {
+        transform: rotate(-$vibrate-angle-small) translateY(-15px);
+    }
+
+    60% {
+        transform: rotate($vibrate-angle-large) translateY(-20px);
+    }
+
+    65% {
+        transform: rotate(-$vibrate-angle-large) translateY(-25px);
+    }
+
+    70% {
+        transform: rotate($vibrate-angle-large) translateY(-30px);
+    }
+
+    75% {
+        transform: rotate(-$vibrate-angle-large) translateY(-35px);
+    }
+
+    80% {
+        transform: rotate($vibrate-angle-large) translateY(-40px);
+    }
+
+    85% {
+        transform: translateY(-30px);
+    }
+
+    90% {
+        transform: translateY(-20px);
+    }
+
+    95% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
