--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -171,6 +171,8 @@
         }
     }
 
+
+
     &__icon {
         fill: #000;
         width: 120px;
@@ -178,9 +180,20 @@
         // transition: all .5s;
         z-index: 2;
 
+        &--1 {
+            background-image: url("../img/pacman-foto.png");
+
+            background-size: cover;
+            height: 130px;
+        }
+
         &--1:hover {
-            animation: animation-card-icon-up-down 1s;
-            animation-iteration-count: infinite;
+            // pointer-events: none;
+            // z-index: -1;
+            // background-image: url("../img/pacman-foto.gif");
+            // animation: animation-pacman 1s;
+            // animation-iteration-count: infinite;
+            // background-image: url("../img/137-1376362_png-file-svg-pacman-icon-transparent-png.gif");
         }
 
         &--2:hover {
@@ -189,7 +202,7 @@
         }
 
         &--3:hover~&--3-strip-1 {
-            background-image: linear-gradient(to right, rgb(1, 105, 7), rgb(255, 255, 255));
+            background-color: #61f4de;
             width: 60px;
         }
 
@@ -205,7 +218,7 @@
         }
 
         &--3:hover~&--3-strip-2 {
-            background-image: linear-gradient(to right, rgb(11, 191, 236), rgb(255, 255, 255));
+            background-color: #68b6ef;
             width: 60px;
         }
 
@@ -214,14 +227,14 @@
             top: 45px;
             right: 30px;
             width: 0px;
-            height: 10px;
+            height: 11px;
             z-index: 1;
             transition: all .8s;
             pointer-events: none;
         }
 
         &--3:hover~&--3-strip-3 {
-            background-image: linear-gradient(to right, #F99059, rgb(255, 255, 255));
+            background-color: #6e78ff;
             width: 60px;
         }
 
@@ -253,6 +266,28 @@
         &:visited {
             text-decoration: none;
             position: relative;
+        }
+
+        &--pacman:hover .card__icon--1 {
+            background-image: url("../img/pacman-foto.gif");
+            animation: animation-pacman 3s;
+
+            // animation-iteration-count: infinite;
+        }
+
+        &--pacman {
+            // background-color: red;
+        }
+
+        // &--pacman:hover .card__title {
+        //     animation: animation-pacman-title 3s;
+        // }
+
+        &--pacman .card__title {
+            display: inline-block;
+            background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) var(--pacman-eat-1), rgb(59, 15, 218) var(--pacman-eat-2));
+            -webkit-background-clip: text;
+            color: transparent;
         }
 
     }
