--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -275,6 +275,11 @@
             // animation-iteration-count: infinite;
         }
 
+        // &--pacman:hover .card__title-js {
+  //     background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) 0%, rgb(59, 15, 218) 1%);
+  //     // animation-iteration-count: infinite;
+  // }
+
         &--pacman {
             // background-color: red;
         }
