--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -187,14 +187,7 @@
             height: 130px;
         }
 
-        &--1:hover {
-            // pointer-events: none;
-            // z-index: -1;
-            // background-image: url("../img/pacman-foto.gif");
-            // animation: animation-pacman 1s;
-            // animation-iteration-count: infinite;
-            // background-image: url("../img/137-1376362_png-file-svg-pacman-icon-transparent-png.gif");
-        }
+
 
         &--2:hover {
             animation: animation-card-icon-vibrate 1.2s;
@@ -249,6 +242,8 @@
             pointer-events: none;
         }
 
+
+
     }
 
     &__title {
@@ -271,29 +266,23 @@
         &--pacman:hover .card__icon--1 {
             background-image: url("../img/pacman-foto.gif");
             animation: animation-pacman 3s;
-
-            // animation-iteration-count: infinite;
         }
 
-        // &--pacman:hover .card__title-js {
-  //     background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) 0%, rgb(59, 15, 218) 1%);
-  //     // animation-iteration-count: infinite;
-  // }
-
-        &--pacman {
-            // background-color: red;
-        }
-
-        // &--pacman:hover .card__title {
-        //     animation: animation-pacman-title 3s;
-        // }
 
         &--pacman .card__title {
             display: inline-block;
-            background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) var(--pacman-eat-1), rgb(59, 15, 218) var(--pacman-eat-2));
+            background-image: linear-gradient(90deg, rgba(204, 59, 59, 0) 0%, #2B6F71 1%);
             -webkit-background-clip: text;
             color: transparent;
         }
+
+        &--ball:hover .card__icon--4 {
+
+            // animation: animation-ball-odd 2s;
+            animation-timing-function: linear;
+        }
+
+
 
     }
 
