--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -80,6 +80,49 @@
         grid-row: 2/3;
     }
 
+    &__printing-paper {
+        opacity: 0;
+        position: absolute;
+        background-color: #fff;
+        width: 60px;
+        height: 100px;
+        top: -70px;
+        left: 28px;
+        padding-top: 10px;
+
+        div {
+            font-family: 'Segoe UI';
+            font-weight: bold;
+            color: #000;
+            text-align: center;
+            font-size: 15px;
+            opacity: 1;
+            text-transform: uppercase;
+        }
+    }
+
+    &__printer-cover {
+        position: absolute;
+        background-color: #000;
+        height: 38px;
+        width: 80px;
+        top: 39px;
+        left: 20px;
+        z-index: 10;
+    }
+
+    &__printer-led {
+        position: absolute;
+        top: 45px;
+        left: 94px;
+        border-radius: 50%;
+        background-color: rgb(0, 60, 255);
+        height: 10px;
+        width: 10px;
+        z-index: 11;
+
+    }
+
     @media only screen and (max-width: $bp-largest) {
         &--3 {
             grid-column: 1/3;
@@ -282,7 +325,33 @@
             animation-timing-function: linear;
         }
 
+        &--printer:hover .card__printing-paper {
+            animation:  animation-printer-card 5s forwards;
+            transition: all 5s;
+            transform: translateY(160px);
+        
+            
+        }
 
+        &--printer:hover .card__printing-paper .line-1 {
+            animation: animation-printer-text-line-1 5s;
+        }
+
+        &--printer:hover .card__printing-paper .line-2 {
+            animation: animation-printer-text-line-2 5s;
+        }
+
+        &--printer:hover .card__printing-paper .line-3 {
+            animation: animation-printer-text-line-3 5s;
+        }
+        &--printer:hover .card__printing-paper .line-4 {
+            animation: animation-printer-text-line-4 5s;
+        }
+
+        &--printer:hover .card__printer-led {
+            background-color: rgb(47, 255, 64);
+            animation: animation-printer-led 5s;
+        }
 
     }
 
