--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -177,7 +177,7 @@
             align-items: center;
             height: 100%;
             width: 100%;
-            background-color: rgba($color: #fff, $alpha: 0.6);
+            background-color: rgba( #fff,  0.6);
         }
 
         &-back {
