--- a/css/main.css
+++ b/css/main.css
@@ -698,6 +698,18 @@ body {
   border-radius: 10px;
 }
 
+.contact-element {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 6;
+  grid-column: 1/7;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  background-color: rgba(255, 255, 255, 0.6);
+  width: 100%;
+  height: 100%;
+}
+
 .animation-rotate-card-front {
   -webkit-transform: rotateY(-180deg);
           transform: rotateY(-180deg);
