--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -50,6 +50,7 @@ body {
     background-repeat: no-repeat;
     position: relative;
     // width: 100vw;
+    // height: 100%;
 
     @media only screen and (max-width: $bp-largest) {
         overflow-y: auto;
